force-app/main/default/objects/Calling_Campaign_Order__c/Calling_Campaign_Order__c.object-meta.xml
<CustomObject>
    <description>Order of one product only for Calling Campaign</description>
    <label>Calling Campaign Order</label>
    <nameField>
        <displayFormat>CCO-{000000}</displayFormat>
        <label>Calling Campaign Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calling Campaign Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>