force-app/main/default/objects/Calling_Campaign_Order__c/fields/Calling_Campaign_Item__c.field-meta.xml
<CustomField>
    <fullName>Calling_Campaign_Item__c</fullName>
    <label>Calling Campaign Item</label>
    <referenceTo>Calling_Campaign__c</referenceTo>
    <relationshipLabel>Calling Campaign Orders</relationshipLabel>
    <relationshipName>Calling_Campaign_Orders</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>