force-app/main/default/objects/Calling_Campaign_Order__c/fields/Calling_Campaign_Product__c.field-meta.xml
<CustomField>
    <fullName>Calling_Campaign_Product__c</fullName>
    <label>Calling Campaign Product</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <errorMessage>There is no stock available on this product</errorMessage>
        <filterItems>
            <field>Calling_Campaign_Product__c.Status__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </filterItems>
        <filterItems>
            <field>$User.BypassVR__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>LV_Interface_Datastage</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Calling_Campaign_Product__c</referenceTo>
    <relationshipLabel>Calling Campaign Orders</relationshipLabel>
    <relationshipName>Calling_Campaign_Orders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>