force-app/main/default/objects/Calling_Campaign_Order__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Calling Campaign Orders</relationshipLabel>
    <relationshipName>Calling_Campaign_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>