force-app/main/default/objects/Calling_Campaign_Order__c/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <formula>Calling_Campaign_Item__r.Client__r.FirstName+ &apos; &apos; +  Calling_Campaign_Item__r.Client__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Name</label>
    <type>Text</type>
</CustomField>