force-app/main/default/objects/Calling_Campaign_Order__c/fields/Created_by_Me__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Me__c</fullName>
    <description>Used for List view</description>
    <formula>$User.Id = CreatedBy.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created by Me</label>
    <type>Checkbox</type>
</CustomField>