force-app/main/default/objects/Calling_Campaign_Order__c/fields/My_Pick_Up_Store__c.field-meta.xml
<CustomField>
    <fullName>My_Pick_Up_Store__c</fullName>
    <description>User default store = store code of the pick up store of the order</description>
    <formula>TEXT( $User.DefaultStore__c) =  Pick_up_Store__r.RetailStoreId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Pick Up Store</label>
    <type>Checkbox</type>
</CustomField>