force-app/main/default/objects/Calling_Campaign_Order__c/fields/My_Store__c.field-meta.xml
<CustomField>
    <fullName>My_Store__c</fullName>
    <description>Default Store of the user = Store code of the assigned Store of the calling campaign item linked to that order</description>
    <formula>TEXT( $User.DefaultStore__c )=   Calling_Campaign_Item__r.Assigned_Store__r.RetailStoreId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Store</label>
    <type>Checkbox</type>
</CustomField>