force-app/main/default/objects/Calling_Campaign_Order__c/fields/Pick_up_Store_Code__c.field-meta.xml
<CustomField>
    <fullName>Pick_up_Store_Code__c</fullName>
    <description>Retail Store ID of the Pick Up Store for Calling Campaign Order</description>
    <formula>Pick_up_Store__r.RetailStoreId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pick up Store Code</label>
    <type>Text</type>
</CustomField>