force-app/main/default/objects/Calling_Campaign_Order__c/fields/Pick_up_Store_Country__c.field-meta.xml
<CustomField>
    <fullName>Pick_up_Store_Country__c</fullName>
    <formula>TEXT(Pick_up_Store__r.StoreCountry__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pick up Store Country / Region</label>
    <type>Text</type>
</CustomField>