force-app/main/default/objects/Calling_Campaign_Order__c/fields/Product_Image__c.field-meta.xml
<CustomField>
    <fullName>Product_Image__c</fullName>
    <formula>IMAGE($Setup.ProductSettings__c.BccLargePictureUrl__c + &apos;louis-vuitton--&apos; +  Calling_Campaign_Product__r.Sku_Number__c  + &apos;_PM2_Front%20view.jpg?wid=200&apos;, &apos;No Image&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Image</label>
    <type>Text</type>
</CustomField>