force-app/main/default/objects/Calling_Campaign_Order__c/fields/Received_in_Store__c.field-meta.xml
<CustomField>
    <fullName>Received_in_Store__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Received in Store</label>
    <type>Checkbox</type>
</CustomField>