force-app/main/default/objects/Calling_Campaign_Order__c/fields/Sku_Order__c.field-meta.xml
<CustomField>
    <fullName>Sku_Order__c</fullName>
    <formula>Calling_Campaign_Product__r.Sku_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sku Order</label>
    <type>Text</type>
</CustomField>