force-app/main/default/objects/Calling_Campaign_Order__c/fields/TECH_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>TECH_Client_ID__c</fullName>
    <description>Tech field used for flow. Creation of a request to store from the Calling Campaign order</description>
    <formula>Calling_Campaign_Item__r.Client__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Client ID</label>
    <type>Text</type>
</CustomField>