force-app/main/default/objects/Calling_Campaign_Order__c/fields/TECH_Dynamic_Order_Link__c.field-meta.xml
<CustomField>
    <fullName>TECH_Dynamic_Order_Link__c</fullName>
    <description>Store dynamically the url of the record</description>
    <formula>LEFT($Api.Partner_Server_URL_300, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_300))&amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Dynamic Order Link</label>
    <type>Text</type>
</CustomField>