force-app/main/default/objects/Calling_Campaign_Order__c/fields/TECH_Quantity__c.field-meta.xml
<CustomField>
    <fullName>TECH_Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Quantity of product.  By default there is only one product per order. This field is used for SAP</description>
    <label>TECH_Quantity</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>