force-app/main/default/objects/Calling_Campaign_Order__c/fields/Validated_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Validated_Status_Date__c</fullName>
    <description>Store the date when the order goes to Validated Status with process builder : Callling Campaign Order</description>
    <label>Validated Status Date</label>
    <type>Date</type>
</CustomField>