force-app/main/default/objects/Calling_Campaign_Order__c/validationRules/Calling_Campaign_1order_per_Item.validationRule-meta.xml
<ValidationRule>
    <fullName>Calling_Campaign_1order_per_Item</fullName>
    <active>false</active>
    <description>You can have only one order per Calling Campaign Item</description>
    <errorConditionFormula>Calling_Campaign_Item__r.Order_Roll_up__c &gt; 1</errorConditionFormula>
    <errorMessage>You can have only one order per Calling Campaign Item</errorMessage>
</ValidationRule>