force-app/main/default/objects/Calling_Campaign_Order__c/validationRules/CallingCampaignOrder_not_created.validationRule-meta.xml
<ValidationRule>
    <fullName>CallingCampaignOrder_not_created</fullName>
    <active>true</active>
    <description>Calling campaign order can&apos;t be created if the stock is not available</description>
    <errorConditionFormula>AND( 
NOT( $User.BypassVR__c ), 
NOT( $Profile.Name = &quot;LV_Interface_Datastage&quot;), 
Calling_Campaign_Product__r.Status__c = &quot;Not Available&quot; 
)</errorConditionFormula>
    <errorMessage>There is no stock available. You can&apos;t create an order</errorMessage>
</ValidationRule>